fix 1px scrollbar

--- a/client/assets/styles.scss
+++ b/client/assets/styles.scss
@@ -287,7 +287,7 @@ ui-content {
 
 				flex-direction: column;
 				flex-wrap: wrap;
-				overflow-y: auto;
+				overflow-y: hidden;
 		
 				ui-issues {
 					display: flex;
